@@ -88,7 +88,7 @@ sub setup
  *
  * SDCC is licensed under the GNU Public license (GPL) v2. Note that
  * this license covers the code to the compiler and other executables,
- * tbut explicitly does not cover any code or objects generated by sdcc.
+ * but explicitly does not cover any code or objects generated by sdcc.
  *
  * For pic device libraries and header files which are derived from
  * Microchip header (.inc) and linker script (.lkr) files Microchip
@@ -120,7 +120,7 @@ HEREDOC
  *
  * SDCC is licensed under the GNU Public license (GPL) v2. Note that
  * this license covers the code to the compiler and other executables,
- * tbut explicitly does not cover any code or objects generated by sdcc.
+ * but explicitly does not cover any code or objects generated by sdcc.
  *
  * For pic device libraries and header files which are derived from
  * Microchip header (.inc) and linker script (.lkr) files Microchip
